# amazon-order-mcp

./: .gitignore  README.md  amazon_order_mcp.py  pyproject.toml
